<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp">

            <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_back"
                android:onClick="personalFinish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/personal_info"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:onClick="onSaved"
                android:text="@string/save"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lay_personal_head_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:onClick="setHead"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/head_image"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/personal_headimg_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/custom_arrow" />

                <ImageView
                    android:id="@+id/personal_head_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/personal_headimg_click" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/setting_hint" />

            <RelativeLayout
                android:id="@+id/lay_personal_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:onClick="onNickName"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/nick_name"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/personal_nickname_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/custom_arrow" />

                <TextView
                    android:id="@+id/personal_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/personal_nickname_click"
                    android:textColor="@color/setting_text"
                    android:textSize="16dp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/personal_info_nickname_input_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/setting_hint" />

                <EditText
                    android:id="@+id/personal_nickname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_nickname"
                    android:padding="15dp"
                    android:textColor="@color/setting_text"
                    android:textColorHint="@color/setting_hint"
                    android:textSize="18dp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/lay_personal_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="15dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/qr_code"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/personal_qr_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/custom_arrow" />

                <ImageView
                    android:id="@+id/personal_qr_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/personal_qr_click" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lay_personal_info_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalized_signature"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/setting_hint" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/personal_sign_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top|left"
                    android:hint="@string/say_some_thing"
                    android:minLines="4"
                    android:textColor="@color/setting_text"
                    android:textColorHint="@color/setting_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/personal_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:text="250"
                    android:textColor="@color/setting_hint" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>