<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bj">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:onClick="loginFinish"
        android:background="@mipmap/x"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@mipmap/login_logo"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_text_02"
        android:layout_centerHorizontal="true"
        android:text="Life is a journey."
        android:textColor="@android:color/white"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/login_text_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Enjoy the ride."
        android:textColor="@android:color/white"
        android:textSize="24dp" />


    <LinearLayout
        android:id="@+id/login_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_weibo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@mipmap/login_square"
        android:gravity="center"
        android:onClick="loadByWeChat"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_wechaticon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_wechat"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_bottom_text"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@mipmap/login_square"
        android:gravity="center"
        android:onClick="loadByWeibo"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_weiboicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_weibo"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_protocol_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="Copyright © AirPPT"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login_protocol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="toProtocolActivity"
        android:layout_marginBottom="10dp"
        android:text="@string/use_protocol"
        android:textColor="@android:color/white"
        android:textSize="12dp"/>

</RelativeLayout>